--- a/src/main/resources/static/operation.html
+++ b/src/main/resources/static/operation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>维护页</title>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/operation.js"></script>
 </head>
 <body>
